fix: update package.json

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@typecms-sdk/react-sdk",
   "version": "1.0.0",
-  "description": "The react SDK for Type CMS",
+  "description": "Type CMS SDK for React",
   "main": "index.js",
   "scripts": {
     "semantic-release": "semantic-release"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Type CMS Inc.",
+  "license": "MIT",
+  "homepage": "https://www.typecms.com/",
   "release": {
     "branches": [
       "main",
