--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "@typecms-sdk/react-sdk",
   "version": "1.0.3",
   "description": "Type CMS SDK for React",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "watch": "tsc --watch"
   },
   "author": "Type CMS Inc.",
   "license": "MIT",
   "homepage": "https://www.typecms.com/",
   "files": [
-    "hooks/",
-    "README.md"
+    "src/",
+    "README.md",
+    "CHANGELOG.md"
   ],
   "release": {
     "branches": [
@@ -43,7 +45,9 @@
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/npm": "^12.0.0",
-    "semantic-release": "^23.0.8"
+    "@types/react": "^18.2.79",
+    "semantic-release": "^23.0.8",
+    "typescript": "^5.4.5"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0"
